# ChangeLog for app-admin/eselect
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/app-admin/cvs-repo/gentoo-x86/app-admin/eselect/ChangeLog,v 1.2 2005/06/18 16:10:05 ka0ttic Exp $

*eselect-0.9.5 (18 Jun 2005)

  18 Jun 2005; Aaron Walker <ka0ttic@gentoo.org> -eselect-0.9.4.ebuild,
  +eselect-0.9.5.ebuild:
  Version bump.

*eselect-0.9.4 (13 Jun 2005)

  13 Jun 2005; Aaron Walker <ka0ttic@gentoo.org> +metadata.xml,
  +eselect-0.9.4.ebuild:
  Version bump; moved from app-admin/eclectic to app-admin/eselect.

  04 Jun 2005; Stephen Bennett <spb@gentoo.org> eclectic-0.9.3.ebuild:
  ~mips keywords

  17 May 2005; Ciaran McCreesh <ciaranm@gentoo.org> eclectic-0.9.2.ebuild,
  eclectic-0.9.3.ebuild:
  Update homepage now that there's a proper website

  16 May 2005; Ciaran McCreesh <ciaranm@gentoo.org> eclectic-0.9.3.ebuild:
  Up the bash dependency to version 3. This is temporary and just for this
  release.

*eclectic-0.9.3 (16 May 2005)

  16 May 2005; Ciaran McCreesh <ciaranm@gentoo.org> +eclectic-0.9.3.ebuild:
  Version bump

  15 May 2005; Fernando J. Pereda <ferdy@gentoo.org> eclectic-0.9.2.ebuild:
  keyworded ~alpha

  15 May 2005; Ciaran McCreesh <ciaranm@gentoo.org> metadata.xml,
  eclectic-0.9.2.ebuild:
  Added ~sparc, update metadata

  12 May 2005; Danny van Dyk <kugelfang@gentoo.org> eclectic-0.9.2.ebuild:
  Marked ~amd64.

  12 May 2005; Aaron Walker <ka0ttic@gentoo.org> eclectic-0.9.2.ebuild:
  Fix dohtml glob; default.css wasn't getting installed.

  11 May 2005; Lars Weiler <pylon@gentoo.org> eclectic-0.9.2.ebuild:
  Added ~ppc.

*eclectic-0.9.2 (08 May 2005)

  08 May 2005; Aaron Walker <ka0ttic@gentoo.org> -eclectic-0.9.1.ebuild,
  +eclectic-0.9.2.ebuild:
  Version bump.

*eclectic-0.9.1 (08 May 2005)

  08 May 2005; Aaron Walker <ka0ttic@gentoo.org> +metadata.xml,
  +eclectic-0.9.1.ebuild:
  Initial commit.
