@@ -1,14 +1,16 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-MD5 a7d61dd51683680f9ccd665178a87353 eselect-0.9.5.ebuild 916
-MD5 b4204e3b0a3458fcdcfa2038cc701ab8 ChangeLog 1881
+MD5 a61c648e92daab00934a83ab82e1c688 ChangeLog 2005
+MD5 615960d419284cf714b822d4f63f90a1 eselect-0.9.6.ebuild 920
 MD5 ca75babbaadabb722f6415ddec4c0ce8 metadata.xml 226
+MD5 a7d61dd51683680f9ccd665178a87353 eselect-0.9.5.ebuild 916
 MD5 26560afee18901ac69ca68d54dfcb6fd files/digest-eselect-0.9.5 66
+MD5 c7f28f299bf397889d5c4ffb8bcc1772 files/digest-eselect-0.9.6 65
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.1 (GNU/Linux)
 
-iD8DBQFCtEd0EZCkKN40op4RAtSwAKCpVRsBIAJm1bxQlQN1twdGs46E1wCeKP9G
-ZuJ9NX6aY9rIwCryBydVZKk=
-=VVLB
+iD8DBQFC5PNA5mJXAu5GbtIRAspdAJwPc1c6HrgjE0pbrYuJOTHCmYysvQCfZDhs
+A6ezwBwaRT44bo/qYkJGnic=
+=G7lz
 -----END PGP SIGNATURE-----
