@@ -1,0 +1,34 @@
+# Copyright 1999-2005 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /usr/local/ssd/gentoo-x86/output/app-admin/cvs-repo/gentoo-x86/app-admin/eselect/Attic/eselect-0.9.6.ebuild,v 1.1 2005/07/25 14:08:02 kugelfang Exp $
+
+inherit bash-completion
+
+DESCRIPTION="Modular -config replacement utility"
+HOMEPAGE="http://www.gentoo.org/proj/en/eselect/"
+SRC_URI="http://dev.gentoo.org/~kugelfang/${PN}/${P}.tar.bz2
+	mirror://gentoo/${P}.tar.bz2"
+
+LICENSE="GPL-2"
+SLOT="0"
+KEYWORDS="~alpha ~amd64 ~mips ~ppc ~sparc ~x86"
+IUSE="doc"
+
+DEPEND="sys-apps/sed
+	doc? ( dev-python/docutils )"
+RDEPEND="sys-apps/sed"
+
+src_compile() {
+	econf || die "econf failed"
+	emake || die "emake failed"
+	if use doc ; then
+		make html || die "failed to build html"
+	fi
+}
+
+src_install() {
+	make DESTDIR="${D}" install || die "make install failed"
+	dodoc README TODO doc/*.txt
+	use doc && dohtml *.html doc/*
+	dobashcompletion misc/${PN}.bashcomp
+}
