@@ -1,6 +1,11 @@
 # ChangeLog for app-admin/eselect
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-admin/cvs-repo/gentoo-x86/app-admin/eselect/ChangeLog,v 1.2 2005/06/18 16:10:05 ka0ttic Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-admin/cvs-repo/gentoo-x86/app-admin/eselect/ChangeLog,v 1.3 2005/07/25 14:08:02 kugelfang Exp $
+
+*eselect-0.9.6 (25 Jul 2005)
+
+  25 Jul 2005; Danny van Dyk <kugelfang@gentoo.org> +eselect-0.9.6.ebuild:
+  Version bump.
 
 *eselect-0.9.5 (18 Jun 2005)
 
